# devdocs-mcp

./: .clinerules  Cargo.toml  README.md
docs/: development.md  usage.md
src/tools/docs/: devdocs.rs  docs.rs  golang.rs  mod.rs  npm.rs  pypi.rs  tests.rs
tests/: integration_tests.rs
